# SmartWrench

./: .env.example  .gitignore  gen_passwords.py  newmaintenance.code-workspace  render.yaml
11Labs/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
11Labs/.cursor/rules/: architecture.mdc  python-module-pattern.mdc  system-prompt-protected.mdc
11Labs/.github/workflows/: ci.yml
11Labs/config/: agent.json  prompt-post-booking.md  system-prompt.md
11Labs/config/tools/: get_available_slots.json
11Labs/docs/: ARCHITECTURE.md  agent-spec.md  data-dictionary.md  source-spec.txt  substitutions.json  system-prompt.md  time-slots.md
11Labs/docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-strict-typing-and-encapsulation.md  0003-toml-for-human-config.md  0004-json-everywhere.md  0005-simulator-fastapi-htmx.md  0006-case-lifecycle-and-normalized-fixtures.md
11Labs/fixtures/: slots.json
11Labs/fixtures/cases/: case_038aae561c102ac6.json  case_09a7dd688b930583.json  case_0b3c0cb3e274baa1.json  case_0eaebd26a1f62905.json  case_122119126fc3d507.json  case_275038c7e065f042.json  case_2b4b57217ffcc9b1.json  case_2fd703100e68e30c.json  case_38219f690ee8656e.json  case_3e9feb49a8976137.json  case_4c1b51514202b8c0.json  case_4d25fccb832028a7.json  case_4fd5d0cb883ce6c0.json  case_51e8ad746e3383a3.json  case_52fda7b9088fc9dd.json  case_57a637fd30dd6c39.json  case_59c2d6bf2408d70d.json  case_60db2b872f6bf918.json  case_6ce27a68565162c1.json  case_6d44f3f5de70e536.json  case_78b1c025e8329318.json  case_7b200f4a569393af.json  case_831ef845b6e6e3ff.json  case_84135c39f992dbb6.json  case_8429460ae05751aa.json  case_86ff46bc4bc01bc6.json  case_8c3325e5688cdd21.json  case_8dd0d68eb826a54f.json  case_9c59919ac4c9727d.json  case_9fd0bbfda9644b02.json  case_abbc6f20b38836a9.json  case_b977926c95267510.json  case_bd04bb9bf669ab5d.json  case_cfdf0e6ed968cbec.json  case_d0f402118134de5c.json  case_d135979c2e1c3f0a.json  case_d496ce22169be7e1.json  case_d6a1ba1400213bb3.json  case_dfb2630cc09a1c5c.json  case_e3ffa7bb2c8f1171.json  (+7 more)
11Labs/fixtures/customers/: cust_jones_robert.json
11Labs/fixtures/dealers/: dealer_village_jeep_royal_oak.json
11Labs/fixtures/vehicles/: 1C4RJFBG5NC123456.json
11Labs/scripts/: _client.py  agent.py  latency_report.py  stt.py  trigger.py  tts.py
11Labs/src/guidepoint/: __init__.py
11Labs/src/guidepoint/agent/: __init__.py  __main__.py  _client.py  _io.py  _models.py  _protocol.py  _service.py  _variable_audit.py
11Labs/src/guidepoint/case/: __init__.py  _actions.py  _call_session.py  _driver.py  _factory.py  _manager.py  _models.py  _port_stubs.py  _ports.py  _post_call.py  _reducer.py  _repository.py  _signals.py  _timer_service.py  _trigger_source.py  _world_bridge.py
11Labs/src/guidepoint/clock/: __init__.py  _clock.py
11Labs/src/guidepoint/events/: __init__.py  _bus.py
11Labs/src/guidepoint/master_data/: __init__.py  _models.py  _repository.py
11Labs/src/guidepoint/observability/: __init__.py  _logging.py
11Labs/src/guidepoint/outbound/: __init__.py  _ports.py  _worker.py
11Labs/src/guidepoint/persistence/: __init__.py  _migrate_from_json.py  _outbound.py  _schema.sql
11Labs/src/guidepoint/persistence/sqlite/: __init__.py  _case_repo.py  _outbound_queue.py
11Labs/src/guidepoint/scheduling/: __init__.py  _models.py  _protocol.py  _service.py
11Labs/tests/agent/: _fakes.py  _helpers.py  test_cli.py  test_client.py  test_io.py  test_models.py  test_service.py  test_variable_audit.py
11Labs/tests/case/: _helpers.py  test_call_session.py  test_driver.py  test_factory.py  test_lifecycle_integration.py  test_manager.py  test_models.py  test_port_stubs.py  test_post_call.py  test_recovery.py  test_reducer.py  test_reducer_inbound.py  test_repository.py  test_signals.py  test_timer_service.py  test_trigger_source.py  test_voice_call_manager.py  test_world_bridge.py
11Labs/tests/clock/: test_clock.py
11Labs/tests/events/: test_bus.py
11Labs/tests/master_data/: test_models.py  test_repository.py
11Labs/tests/observability/: test_logging.py
11Labs/tests/outbound/: test_worker.py
11Labs/tests/persistence/: test_sqlite_case_repo.py  test_sqlite_outbound_queue.py
11Labs/tests/scheduling/: _fakes.py  test_models.py  test_service.py
docs/: case-lifecycle.html  case-state-jump-table.html  rollout-plan.html  v2-future-state.html  work-package-dealer-scheduling.html
llm/: .env.example  .gitignore  pyproject.toml  requirements.txt
llm/prompts/: kate.md
llm/src/llm/: __init__.py  _client.py  cli.py
prompt_composer/: README.md  pyproject.toml
prompt_composer/src/prompt_composer/: __init__.py  _renderer.py
prompt_composer/tests/: test_build_prompt.py  test_renderer.py
scripts/: render_logs.py  (+1 more)
simulator/: README.md  pyproject.toml  start-simulator.command
simulator/src/simulator/: __init__.py  __main__.py  _app.py  _basic_auth.py  _connection.py  _consent.py  _ephemeral_triggers.py  _models.py  _outbound_setup.py  _routes.py  _sim_controls.py  _sim_ports.py  _slots.py  _sms_context_registry.py  _sms_setup.py  _users.py
simulator/src/simulator/static/: app.css  app.js
simulator/src/simulator/templates/: _case_panel.html  index.html
simulator/tests/: _helpers.py  test_connection.py  test_models.py  test_routes.py  test_sim_controls.py  test_sim_ports.py  test_slots.py  test_sms_dispatch.py
sms/: .env.example  README.md  _set_webhook.py  pyproject.toml  requirements.txt
sms/src/sms/: __init__.py  _client.py  cli.py  server.py
sms_adapter/: README.md  pyproject.toml
sms_adapter/src/sms_adapter/: __init__.py  _call_session.py  _composer.py  _dispatcher.py  _event_log.py  _gated_twilio.py  _history.py  _llm.py  _optout.py  _orchestrators.py  _queued_twilio.py  _routing.py  _take_turn.py  _twilio.py
sms_adapter/tests/: conftest.py  test_call_session.py  test_composer.py  test_dispatcher.py  test_gated_twilio.py  test_history.py  test_optout.py  test_orchestrators.py  test_queued_twilio.py  test_routing.py  test_sms_call_manager.py  test_take_turn.py
(+1 files in other folders)
