[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guidepoint"
version = "0.1.0"
description = "Guidepoint Systems vehicle service scheduling agent backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Guidepoint Systems" }]

dependencies = [
  "elevenlabs>=2.45.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "structlog>=24.1",
  "anyio>=4.4",
  "tenacity>=8.5",
  "returns>=0.23",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.370",
  "ruff>=0.5",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "syrupy>=4.6",
  "respx>=0.21",
  "pip-audit>=2.7",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

# ----------------------------------------------------------------------------
# Pyright — strict type checking, encapsulation enforcement
# ----------------------------------------------------------------------------
[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportPrivateUsage = "error"
reportImportCycles = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportImplicitOverride = "error"
reportUninitializedInstanceVariable = "error"
reportMissingTypeArgument = "error"
reportInvalidTypeVarUse = "error"

# ----------------------------------------------------------------------------
# Ruff — lint + format
# ----------------------------------------------------------------------------
[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "W",       # pycodestyle
  "F",            # pyflakes
  "I",            # isort
  "B",            # bugbear
  "ARG",          # unused arguments
  "C4",           # comprehensions
  "C90",          # mccabe complexity
  "D",            # pydocstyle
  "DTZ",          # datetime safety (forces tz-aware datetimes)
  "ERA",          # commented-out code
  "G",            # logging format
  "INP",          # implicit namespace packages
  "N",            # pep8-naming
  "PERF",         # perflint
  "PIE",
  "PL",           # pylint
  "PT",           # pytest style
  "RET",
  "RSE",
  "RUF",
  "S",            # bandit (security)
  "SIM",
  "SLF",          # private member access (encapsulation)
  "T20",          # banned print/pprint
  "TID",          # tidy imports
  "TRY",          # exception anti-patterns
  "UP",           # pyupgrade
]
ignore = [
  "D100", "D104", "D105", "D107",  # missing docstrings on modules/packages/dunders
  "PLR0913",                        # too many args (we use kw-only constructor injection)
  "TRY003",                         # long exception messages — fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",   # asserts allowed in tests
  "D",      # docstrings not required in tests
  "PLR2004", # magic numbers fine in tests
  "SLF001", # private member access fine in unit tests of same module
]
"scripts/**" = [
  "T201",   # CLI scripts can print
  "D",
  "INP001", # CLI scripts not part of the package
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
  "--cov=src/guidepoint",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/guidepoint"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
  "@abstractmethod",
  "^\\s*\\.\\.\\.\\s*$",
]
