[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulator"
version = "0.1.0"
description = "Operator console for firing service triggers and watching cases"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

# Runtime deps for the UI/server bits. The domain (`guidepoint`) is
# installed separately as an editable package from ../11Labs. SMS
# dispatch (sms_adapter) and the Twilio webhook (sms) are sibling
# packages installed editable from ../sms_adapter and ../sms.
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7",
  "structlog>=24.1",
  "elevenlabs>=2.45.0",
  "sms_adapter",
  "sms",
  "prompt_composer",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"simulator" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
