[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sms"
version = "0.1.0"
description = "Twilio SMS pipe: outbound send + inbound webhook with a dispatch hook for conversation adapters."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "twilio>=9.3.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
]

[project.scripts]
send-sms = "sms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
